--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   lint:
-    name: lint
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -15,7 +15,7 @@ jobs:
       - name: Lint
         uses: golangci/golangci-lint-action@v2
   test:
-    name: test
+    name: Test
     runs-on: ubuntu-latest
     steps:
     - name: Install Go
