--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# Mac files
+.DS_Store
+
 # Wren specific
 wren-server-go
 wren.db
