--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Wren binary
+# Mac files
+.DS_Store
+
+# Wren specific
 wren-server-go
+wren.db
